[package]
name = "space-colonization"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/space-colonization-rs"
description = "Space-Colonization Algorithm"
keywords = ["fractal", "graphic"]

[dependencies]
rand = "0.3"
num = "0.1"
nalgebra = "0.4.0"

[dev-dependencies]
kiss3d = {git = "https://github.com/Ticki/kiss3d.git"}
clap = "1.5.5"
eps-writer = {git = "https://github.com/mneumann/eps-writer-rs"}
dot = "0.1.2"
